<?php die(); ?>
SocialMagick 3.0.0
--------------------------------------------------------------------------------
+ A component to manage your templates
+ New OpenGraph Preview in the frontend
+ Correct cascading of the options
+ Image sources with fallbacks
+ Preview template
+ Image effects: opacity, grayscale, sepia.
+ ImageMagick: Show ellipses when text is being truncated
+ Text stroke
+ Text opacity
+ Crop anchor and crop point nudging
+ Scheduled Task plugin to clean up old images
# [LOW] ImageMagick: The text was vertically anchored in the centre instead of the top
# [LOW] GD: The ellipses when clipping a long sentence were unreliable