@@ -47,3 +47,7 @@
 <p>
 	<strong>ImageMagick: Show ellipses when text is being truncated</strong>. When text overlaid on an OpenGraph image is being truncated, the ellipses are now shown regardless of whether you use the ImageMagick or the GD library.
 </p>
+
+<p>
+	<strong>Choose between JPG (default), PNG, or WebP format for generated OpenGraph images</strong>. You can now select the image format you prefer, and set its quality level. The default format has been changed from PNG to JPG (about 5 times smaller files with imperceptible loss in quality), and the default quality level has been increased to 85 giving sharper images.
+</p>
