@@ -56,8 +56,14 @@ COM_SOCIALMAGICK_CONFIG_FB_APP_ID_DESC="If your site is using a Facebook app, e.
 COM_SOCIALMAGICK_CONFIG_ADD_OG_DECLARATION_LABEL="Add OpenGraph Property Declaration"
 COM_SOCIALMAGICK_CONFIG_ADD_OG_DECLARATION_DESC="SocialMagick will add the OpenGraph namespace declaration to the <code>&lt;html&gt;</code> element of your site's HTML output. Leave enabled unless you have a custom template or a third party extension which does that for you. Even in this case it is safe to leave this option enabled; SocialMagick will check if the namespace declaration is present to avoid creating a duplicate definition."
 
-COM_SOCIALMAGICK_CONFIG_QUALITY_LABEL="PNG Compression Level"
-COM_SOCIALMAGICK_CONFIG_QUALITY_DESC="Controls the compression of the generated PNG images. Higher numbers give smaller files, but save the generated images a bit slower. There is <strong>no</strong> loss in image quality regardless of the setting you choose. Recommended setting: 95"
+COM_SOCIALMAGICK_CONFIG_IMAGETYPE_LABEL="Image Type"
+COM_SOCIALMAGICK_CONFIG_IMAGETYPE_DESC="The image file type for generated OpenGraph images. PNG and JPEG are universally supported. PNG generates massive files which preserve transparency, JPG (default) generates fairly small files with some visual artifacts. WebP produces the smallest files with minimal visual artifacts, <em>but</em> some niche services and (usually older versions of) third party software may not be able to display WebP files. If you know your links won't be shared in any niche software / service (or don't care about them), we recommend switching this option to WebP for best quality and size."
+COM_SOCIALMAGICK_CONFIG_IMAGETYPE_OPT_PNG="PNG"
+COM_SOCIALMAGICK_CONFIG_IMAGETYPE_OPT_JPG="JPEG"
+COM_SOCIALMAGICK_CONFIG_IMAGETYPE_OPT_WEBP="WebP"
+
+COM_SOCIALMAGICK_CONFIG_QUALITY_LABEL="Image Quality"
+COM_SOCIALMAGICK_CONFIG_QUALITY_DESC="Controls the quality of the generated image by adjusting the compression level. 0 is the worst image quality, at the best compression rate and smallest image size, but is rarely usable. 100 is the best image quality, using no compression and the highest image size. Exception: WebP uses lossless compression at Image Quality level 90 through 100 which may result in fairly small files with no loss of image quality. The default value of 75 is usually a good balance between size and quality."
 
 COM_SOCIALMAGICK_CONFIG_DEVMODE_LABEL="Regenerate Images On Every Page Load (Development Mode)"
 COM_SOCIALMAGICK_CONFIG_DEVMODE_DESC="SocialMagick will ignore an already generated OpenGraph image, instead regenerating the OpenGraph image on every page load even if the template, extra image, and text have not changed. This is <em>very slow</em>, and only meant for use in development and troubleshooting, typically in combination with Debug Text Layout."
